syntax = "proto3";
package stateset.ssusd.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/stateset/core/x/ssusd/types";

// CollateralPosition represents a user's collateral position
message CollateralPosition {
  string owner = 1;
  cosmos.base.v1beta1.Coin collateral = 2 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin debt = 3 [(gogoproto.nullable) = false];
  string collateralization_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp last_update = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  bool is_liquidatable = 6;
}

// MintRequest represents a request to mint ssUSD
message MintRequest {
  string id = 1;
  string requester = 2;
  cosmos.base.v1beta1.Coin collateral_amount = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin mint_amount = 4 [(gogoproto.nullable) = false];
  string status = 5; // pending, approved, rejected, executed
  google.protobuf.Timestamp created_at = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// AgentWallet represents an autonomous agent's wallet
message AgentWallet {
  string agent_id = 1;
  string owner = 2;
  repeated cosmos.base.v1beta1.Coin balances = 3 [(gogoproto.nullable) = false];
  repeated string authorized_signers = 4;
  uint64 transaction_count = 5;
  string reputation_score = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// OraclePrice represents a price feed from an oracle
message OraclePrice {
  string asset = 1;
  string price = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string source = 3;
  google.protobuf.Timestamp timestamp = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// LiquidationAuction represents a Dutch auction for liquidated collateral
message LiquidationAuction {
  string id = 1;
  string debtor = 2;
  cosmos.base.v1beta1.Coin collateral = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin debt = 4 [(gogoproto.nullable) = false];
  string starting_price = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string current_price = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string price_decay_rate = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp start_time = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp end_time = 9 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string status = 10; // active, completed, cancelled
}

// StabilityPool manages system stability
message StabilityPool {
  cosmos.base.v1beta1.Coin total_deposits = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_debt_absorbed = 2 [(gogoproto.nullable) = false];
  repeated StabilityProvider providers = 3 [(gogoproto.nullable) = false];
}

// StabilityProvider represents a stability pool participant
message StabilityProvider {
  string address = 1;
  cosmos.base.v1beta1.Coin deposit = 2 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin rewards_earned = 3 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp deposit_time = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// SystemMetrics tracks overall system health
message SystemMetrics {
  cosmos.base.v1beta1.Coin total_supply = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_collateral = 2 [(gogoproto.nullable) = false];
  string global_collateral_ratio = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  uint64 total_positions = 4;
  uint64 total_liquidations = 5;
  uint64 total_agents = 6;
  string average_collateral_ratio = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}